Deluge 0.5.5 (xx August 2007)
  * New wizard to aid first-time users with configuration
  * Persistence between sessions for Speed Limiter, Web Seed and Desired Ratio 
  plugins
  * Fix losing data and having to re-download parts
  * Fix password lock showing when main window is not hidden
  * Get rid of the plugin manager and integrate it into preferences
  * New Move torrent plugin - takes over for "move completed downloads" feature
  and provides a "Move Torrent" option when right-clicking on a torrent
  * Save column widths
  * Queue order after restart fixes.
  * Use payload instead of including protocol overhead to ease user confusion 
  of seeding torrents "downloading"
  * New Web Seed plugin for adding URLs to torrents for http seeding
  * Add FAST-extension (http://www.bittorrent.org/fast_extensions.html)

Deluge 0.5.4.1 (10 August 2007)
  * Add "Open containing folder" and "Open File" to the torrent and file 
  menu, respectively
  * Load Blocklist plugin last and have it not lock up the interface during 
  import
  * Add full allocation to preferences for clarification
  * Catch SIGINT, SIGHUP, SIGTERM and Gnome logoff to quit properly
  * Add send local info to developers
  * Fix up pieces, peers and files plugins
  * UPnP fixes
  * Add ExtraStats plugin
  * FreeBSD full allocation fix
  * Added per torrent max upload slots and max connections preferences
  * A lot of other less visible improvements
  
Deluge 0.5.4 (06 August 2007)

  * Tray message includes session totals
  * Ticket #198 - Display peers countries in the Peers tab.
  * Ticket #474 - Multiple password prompts displayed
  * Pause all/resume all in tray menu
  * Peers and Files tabs are now plugins
  * New Location plugin
  * Option to use a random port every time
  * Proxy system redone - you can now specify different information for each 
  type of proxy (DHT, peer, tracker, web-seed)
  * TorrentPieces plugin to view piece updates and show pieces table per file