@@ -1,4 +1,6 @@
 Deluge 0.5.5 (xx August 2007)
+  * Editing a torrent's tracker list is now persistent between sessions
+  * Email alerts in the Torrent Notification plugin
   * New wizard to aid first-time users with configuration
   * Persistence between sessions for Speed Limiter, Web Seed and Desired Ratio 
   plugins
